fix font bug in dark mode

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -300,6 +300,7 @@ body {
     #home p {
         font-size: xx-large;
         margin: 0;
+        color: black;
     }
 
     .social-media a {
@@ -451,6 +452,7 @@ body {
     @media (max-width: 576px) {
         #home p {
             text-align: center;
+            color: black
         }
         #home .social-media {
             text-align: center;
@@ -465,6 +467,7 @@ body {
         #contact h1 {
             margin-top: 35px;
             text-align: center;
+            color: black;
         }
 
         #about p,
